packages/cjs-to-esm/test/snapshots/package-corpus/core-js/es/error/index.js
import "../../modules/es.error.cause";
import "../../modules/es.error.is-error";
import "../../modules/es.error.to-string";
import path from "../../internals/path";
const _cjs_default = path;
export default _cjs_default;
